# PenguinTunes

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  application.yml  discloud.config  docker-compose.yml  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: deploy-to-vps.yaml
modules/: _config.py  configs.py  exceptions.py  globals.py  music.py  song.py  voice_state.py  youtube_downloader.py
modules/buttons/: cassino.py  music.py  music_buttons.py
modules/buttons/blackjack/: actions.py  buttons.py
modules/buttons/dig_trash/: actions.py  buttons.py
modules/buttons/roulette/: actions.py  buttons.py
modules/buttons/slots/: actions.py  buttons.py
modules/buttons/video_poker/: actions.py  buttons.py
modules/cogs/: config.py  fun.py  music.py
modules/orm/: database.py
modules/player/: blackjack.py  cassino.py  player.py  roulette.py  slots.py  video_poker.py
modules/utils/: _config_utils.py  _constants_utils.py  _database_utils.py  _job_utils.py  _text_utils.py
modules/views/: fun.py  music.py  music_view.py
tests/: test_views.py
