[tool.poetry]
name = "piplupdiscordbot"
version = "0.1.0"
description = ""
authors = ["leonardomurakami"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.6.0"
pynacl = "^1.5.0"
yt-dlp = "^2023.12.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
